code modernization of "commandbar" package classes.